# mush

./: .gitignore  .gitmodules  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  README.md  ROADMAP.md  SECURITY.md  justfile
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release.yml
crates/arch/: Cargo.toml  README.md
crates/arch/src/: cli.rs  lib.rs  main.rs  ops.rs
crates/arch/tests/: cli_test.rs
crates/awk/: Cargo.toml  README.md
crates/awk/src/: cli.rs  lib.rs  main.rs  ops.rs
crates/awk/tests/: cli_test.rs
crates/base64/: Cargo.toml  README.md
crates/base64/src/: cli.rs  lib.rs  main.rs  ops.rs
crates/base64/tests/: cli_test.rs
crates/basename/: Cargo.toml  README.md
crates/basename/src/: cli.rs  lib.rs  main.rs  ops.rs
crates/basename/tests/: cli_test.rs
crates/bc/: Cargo.toml  README.md
crates/bc/src/: cli.rs  lib.rs  main.rs  ops.rs
crates/bc/tests/: cli_test.rs
crates/cat/: Cargo.toml  README.md
crates/cat/src/: cli.rs  lib.rs  main.rs  ops.rs
crates/cat/tests/: cli_test.rs
crates/chgrp/: Cargo.toml  README.md
crates/chgrp/src/: cli.rs  lib.rs  main.rs  ops.rs
crates/chgrp/tests/: cli_test.rs
crates/chmod/: Cargo.toml  README.md
crates/chmod/src/: cli.rs  lib.rs  main.rs  ops.rs
crates/chmod/tests/: cli_test.rs
crates/chown/: Cargo.toml  README.md
crates/chown/src/: cli.rs  lib.rs  main.rs  ops.rs
crates/chown/tests/: cli_test.rs
crates/column/: Cargo.toml  README.md
crates/column/src/: cli.rs  lib.rs  main.rs  ops.rs
crates/column/tests/: cli_test.rs
crates/comm/: Cargo.toml  README.md
crates/comm/src/: cli.rs  lib.rs  main.rs  ops.rs
crates/comm/tests/: cli_test.rs
crates/cp/: Cargo.toml  README.md
crates/cp/examples/: basic.rs
crates/cp/src/: cli.rs  lib.rs  main.rs  ops.rs
crates/cut/: Cargo.toml  README.md
crates/date/: Cargo.toml  README.md
crates/date/src/: cli.rs  lib.rs  main.rs  ops.rs
crates/date/tests/: cli_test.rs
crates/df/: Cargo.toml  README.md
crates/diff/: Cargo.toml  README.md
crates/dirname/: Cargo.toml  README.md
crates/du/: Cargo.toml  README.md
crates/echo/: Cargo.toml  README.md
crates/expand/: Cargo.toml  README.md
crates/file/: Cargo.toml  README.md
crates/find/: Cargo.toml  README.md
crates/find/src/: cli.rs  lib.rs  main.rs  ops.rs
crates/find/tests/: cli_test.rs
crates/fmt/: Cargo.toml  README.md
crates/fold/: Cargo.toml  README.md
crates/free/: Cargo.toml  README.md
crates/grep/: Cargo.toml  README.md
crates/grep/src/: cli.rs  lib.rs  main.rs  ops.rs
crates/grep/tests/: cli_test.rs
crates/head/: Cargo.toml  README.md
crates/hostname/: Cargo.toml  README.md
crates/id/: Cargo.toml  README.md
crates/id/src/: cli.rs  lib.rs  main.rs  ops.rs
crates/id/tests/: cli_test.rs
crates/install/: Cargo.toml  README.md
crates/join/: Cargo.toml  README.md
crates/kill/: Cargo.toml  README.md
crates/kill/src/: cli.rs  lib.rs  main.rs  ops.rs
crates/kill/tests/: cli_test.rs
crates/less/: Cargo.toml  README.md
crates/ln/: Cargo.toml  README.md
crates/ls/: Cargo.toml  README.md
crates/ls/examples/: basic.rs  custom_format.rs
crates/ls/src/: cli.rs  color.rs  entry.rs  lib.rs  main.rs  read.rs  sort.rs
crates/ls/src/format/: comma.rs  grid.rs  long.rs  mod.rs  single.rs
crates/ls/src/platform/: unix.rs  windows.rs
crates/ls/tests/: cli_test.rs  color_test.rs  entry_test.rs  format_test.rs  read_test.rs  sort_test.rs
crates/md5sum/: Cargo.toml  README.md
crates/md5sum/src/: cli.rs  lib.rs  main.rs  ops.rs
crates/md5sum/tests/: cli_test.rs
crates/mkdir/: Cargo.toml  README.md
crates/mktemp/: Cargo.toml  README.md
crates/more/: Cargo.toml  README.md
crates/mv/: Cargo.toml  README.md
crates/nohup/: Cargo.toml  README.md
crates/nproc/: Cargo.toml  README.md
crates/paste/: Cargo.toml  README.md
crates/patch/: Cargo.toml  README.md
crates/pgrep/: Cargo.toml  README.md
crates/pkill/: Cargo.toml  README.md
crates/ps/: Cargo.toml  README.md
crates/readlink/: Cargo.toml  README.md
crates/realpath/: Cargo.toml  README.md
crates/reset/: Cargo.toml  README.md
crates/rev/: Cargo.toml  README.md
crates/rm/: Cargo.toml  README.md
crates/sed/: Cargo.toml  README.md
crates/seq/: Cargo.toml  README.md
crates/sha256sum/: Cargo.toml  README.md
crates/sha256sum/src/: cli.rs  lib.rs  main.rs  ops.rs
crates/sha256sum/tests/: cli_test.rs
crates/shuf/: Cargo.toml  README.md
crates/sleep/: Cargo.toml  README.md
crates/sort/: Cargo.toml  README.md
crates/stat/: Cargo.toml  README.md
crates/strings/: Cargo.toml  README.md
crates/su/: Cargo.toml  README.md
crates/sudo/: Cargo.toml  README.md
crates/tail/: Cargo.toml  README.md
crates/tee/: Cargo.toml  README.md
crates/timeout/: Cargo.toml  README.md
crates/touch/: Cargo.toml  README.md
crates/touch/src/: cli.rs  lib.rs  main.rs  ops.rs
crates/touch/tests/: cli_test.rs
crates/tput/: Cargo.toml  README.md
crates/tr/: Cargo.toml  README.md
crates/tree/: Cargo.toml  README.md
crates/uname/: Cargo.toml  README.md
crates/unexpand/: Cargo.toml  README.md
crates/uniq/: Cargo.toml  README.md
crates/uptime/: Cargo.toml  README.md
crates/wc/: Cargo.toml  README.md
crates/whoami/: Cargo.toml  README.md
crates/xargs/: Cargo.toml  README.md
crates/xxd/: Cargo.toml  README.md
crates/yes/: Cargo.toml  README.md
examples/progress/: Cargo.toml
mush/: Cargo.toml  README.md
mush/src/: app.rs  main.rs
mush/src/config/: alias.rs  layout.rs  mod.rs  startup.rs
mush/src/db/: mod.rs
mush/src/shell/: ast.rs  builtins.rs  expand.rs  help_parser.rs  mod.rs  parser.rs  path_resolver.rs  pipeline.rs  script_registry.rs
mush/src/widgets/: autocomplete.rs  command_history.rs  command_input.rs  history_navigator.rs  history_popover.rs  mod.rs
nsis/: installer.nsis  updater.nsis
nsis/ui/: directory.nsh  finish.nsh  install_mode.nsh  instfiles.nsh  license.nsh  options.nsh  options_bun.nsh
nsis/utils/: path_utils.nsh
(+299 files in other folders)
