[workspace]
resolver = "3"
members = ["crates/base64", "crates/basename", "crates/cat", "crates/chmod", "crates/cp", "crates/cut", "crates/date", "crates/df", "crates/diff", "crates/dirname", "crates/du", "crates/echo", "crates/find", "crates/grep", "crates/head", "crates/hostname", "crates/kill", "crates/less", "crates/ln", "crates/ls", "crates/md5sum", "crates/mkdir", "crates/more", "crates/mv", "crates/pgrep", "crates/pkill", "crates/ps", "crates/rm", "crates/sed", "crates/sha256sum", "crates/sleep", "crates/sort", "crates/stat", "crates/sudo", "crates/tail", "crates/tee", "crates/timeout", "crates/touch", "crates/tr", "crates/tree", "crates/uname", "crates/uniq", "crates/wc", "crates/whoami", "crates/xargs", "mush"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
