[workspace]
resolver = "3"
members = ["crates/arch", "crates/awk", "crates/base64", "crates/basename", "crates/cat", "crates/chmod", "crates/column", "crates/comm", "crates/cp", "crates/cut", "crates/date", "crates/df", "crates/diff", "crates/dirname", "crates/du", "crates/echo", "crates/expand", "crates/find", "crates/fmt", "crates/fold", "crates/grep", "crates/head", "crates/hostname", "crates/join", "crates/kill", "crates/less", "crates/ln", "crates/ls", "crates/md5sum", "crates/mkdir", "crates/more", "crates/mv", "crates/nproc", "crates/paste", "crates/pgrep", "crates/pkill", "crates/ps", "crates/readlink", "crates/realpath", "crates/rev", "crates/rm", "crates/sed", "crates/seq", "crates/sha256sum", "crates/sleep", "crates/sort", "crates/stat", "crates/strings", "crates/sudo", "crates/tail", "crates/tee", "crates/timeout", "crates/touch", "crates/tr", "crates/tree", "crates/uname", "crates/unexpand", "crates/uniq", "crates/wc", "crates/whoami", "crates/xargs", "crates/yes", "mush"]

[profile.release]
codegen-units = 1
lto = true
opt-level = "z"
strip = true
