[package]
name = "mush"
version = "0.1.0"
edition = "2024"
description = "A fully cross-platform shell interpreter and drop-in replacement for PowerShell, BASH, and ZSH"
authors = ["Drew Chase <dcmanproductions@gmail.com>"]
license = "MIT"
repository = "https://github.com/drew-chase/mush"
keywords = ["shell", "terminal", "tui", "cross-platform"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = { version = "0.30.0" }
color-eyre = { version = "0.6.5" }
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "1.1.2", features = ["serde"] }
