[package]
name = "mush"
description = "A fully cross-platform shell interpreter and drop-in replacement for PowerShell, BASH, and ZSH"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
readme.workspace = true
keywords = ["shell", "terminal", "tui", "cross-platform"]
categories = ["command-line-utilities"]

[dependencies]
ratatui = { version = "0.30.0" }
color-eyre = { version = "0.6.5" }
serde = { version = "1.0.228", features = ["derive"] }
toml = { version = "1.1.2", features = ["serde"] }
serde_json = { version = "1" }
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
tokio = { version = "1", features = ["rt"] }
dirs = {version = "6.0.0"}
notify = { version = "7", default-features = false, features = ["macos_kqueue"] }
glob = "0.3"
tempfile = "3"
open = "5"
clap = { workspace = true }
arboard = "3"
os_pipe = "1.2.3"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
