[package]
name = "date"
description = "Cross-platform date implementation for the mush shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }
