[package]
name = "find"
description = "Cross-platform find implementation for the mush shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
regex = "1"
glob = "0.3"

[dev-dependencies]
tempfile = "3"
