[package]
name = "grep"
description = "Cross-platform grep implementation for the mush shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
regex = "1"

[dev-dependencies]
tempfile = "3"
