[package]
name = "kill"
description = "Cross-platform kill implementation for the mush shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true

[target.'cfg(unix)'.dependencies]
libc = "0.2"
