[package]
name = "ls"
description = "Cross-platform ls implementation for the mush shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
terminal_size = "0.4"
time = { version = "0.3", features = ["local-offset", "formatting", "macros"] }

[dev-dependencies]
tempfile = "3"
