[package]
name = "md5sum"
description = "Cross-platform md5sum implementation for the mush shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
md-5 = "0.10"
digest = "0.10"

[dev-dependencies]
tempfile = "3"
