[package]
name = "sha256sum"
description = "Cross-platform sha256sum implementation for the mush shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
sha2 = "0.10"
digest = "0.10"

[dev-dependencies]
tempfile = "3"
