[package]
name = "touch"
description = "Cross-platform touch implementation for the mush shell"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true

[dependencies]
clap.workspace = true
filetime = "0.2"

[dev-dependencies]
tempfile = "3"
